[tool.poetry]
name = "fastapi-homeword-todo"
version = "0.0.1"
description = "Homeword Todo"
authors = ["TanThanhLe <tanthanhcr95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"
sqlalchemy-utils = "^0.41.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
